os-app/sub-detail/ui-style.css
.KVCWriteDetail {
	/* KVCWriteDetailFlexbox:Parent */
	display: flex;
	flex-direction: column;
}

@media screen and (min-width: 760px) {

.KVCWriteDetail > :global(.OLSKDetailPlaceholder) {
	/* KVCWriteDetailFlexbox:Child */
	flex-grow: 1;
}

}

@media screen and (max-width: 760px) {

.KVCWriteDetail {
	min-height: 100%;
}

}

.KVCWriteDetailToolbar {
	/* KVCWriteDetailFlexbox:Child */
	flex-shrink: 0;
}

.KVCWriteDetailToolbar a {
	color: inherit;
}

.KVCWriteDetailToolbarArchiveButton, .KVCWriteDetailToolbarUnarchiveButton {
	display: none;
}

.KVCWriteDetailToolbarJumpButton	{
	position: absolute;
	z-index: 999;
	right: 0;
	margin: 16px 13px;
	opacity: 0.5;
	top: var(--OLSKToolbarMinHeight);
}

@media screen and (max-width: 760px) {

.KVCWriteDetailToolbar {
	/* browser quirks */
	z-index: 999;
}

}

.KVCWriteDetail :global(.KVCWriteInput) {
	/* KVCWriteDetailFlexbox:Child */
	flex-grow: 1;
}

@media screen and (min-width: 760px) {

.KVCWriteDetail :global(.KVCWriteInput) {
	/* KVCWriteInputStation:Parent */
	position: relative;
}

}

@media screen and (max-width: 760px) {

.KVCWriteDetail :global(.KVCWriteInput) {
	min-height: 100%;
}

}

/* CodeMirror */

.KVCWriteDetail :global(.CodeMirror) {
	font-family: inherit;
	font-size: 14px;
}

@media screen and (min-width: 760px) {

.KVCWriteDetail :global(.CodeMirror) {
	height: 100%;

	/* KVCWriteInputStation:Child */
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}

}

@media screen and (max-width: 760px) {

.KVCWriteDetail :global(.CodeMirror) {
	/* CodeMirrorResizeToContent */
	height: auto;
}

}

.KVCWriteDetail :global(.CodeMirror-scroll) {
	background: #f8f8f8;
}

@media screen and (max-width: 760px) {

.KVCWriteDetail :global(.CodeMirror-scroll) {
	min-height: calc(100vh - 52px - 52px);
}

}

.KVCWriteDetail :global(.CodeMirror-lines) {
	/* override defaults */
	padding: 10px;
}

.KVCWriteDetail :global(.CodeMirror pre) {
	/* override defaults */
	padding: 0;
}

.KVCWriteDetail :global(.CodeMirror-line:nth-child(1)) {
	font-weight: bold;
}

.KVCWriteDetail :global(.cm-link:hover) {
  cursor: pointer;
}

